<resources>
    <string name="app_name">Nasa Pictures</string>
    <string name="title_activity_image_details">ImageDetailsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="image_carousel_count">%d / %d</string>
    <string name="details_heading_title">Title</string>
    <string name="details_heading_description">Description</string>
    <string name="details_heading_url">URL</string>
    <string name="details_heading_date">Date</string>
    <string name="details_heading_service_version">Service Version</string>
    <string name="details_heading_copyright">Copyright</string>
</resources>