<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_details_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_black_24dp"
            app:tint="@color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_margin="@dimen/horizontal_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_size"
            android:text="@string/details_heading_title"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/image_details_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="The Northern Winter Hexagon"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_size"
            android:text="@string/details_heading_description"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/image_details_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="December's New Moon brought a solar eclipse to some for the holiday season. It also gave beautiful dark night skies to skygazers around the globe, like this moonless northern winter night. In the scene, bright stars of the Winter Hexagon along the Milky Way are rising. Cosy mountain cabins in the snowy foreground are near the village of Oravska Lesna, Slovakia. The shining celestial beacons marking the well-known asterism are Aldebaran, Capella, Pollux (and Castor), Procyon, Rigel, and Sirius. This winter nightscape also reveals faint nebulae in Orion, and the lovely Pleiades star cluster. Slide your cursor over the image to trace the winter hexagon, or just follow this link."
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_size"
            android:text="@string/details_heading_url"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/image_details_url_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="https://apod.nasa.gov/apod/image/1912/DistortedSunrise_Chasiotis_2442.jpg"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textColor="@color/white"
            android:autoLink="web"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_size"
            android:text="@string/details_heading_date"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/image_details_date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="2019-12-28"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_size"
            android:text="@string/details_heading_service_version"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/image_details_version_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="v1"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_size"
            android:text="@string/details_heading_copyright"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/image_details_copyright_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="Elias Chasiotis"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:textColor="@color/white"
            android:layout_marginBottom="24dp"/>

    </LinearLayout>
</ScrollView>
